[metadata]
name = yf_cache
version = 0.1.0
description = Simple Yahoo Finance caching downloader
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = MIT
url = https://github.com/yourusername/yf_cache
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=1.5
    yfinance>=0.2
    pytz

[options.packages.find]
where = .
exclude = tests
